# search

./: .gitignore  CMakeLists.txt  README.md  cli.cpp  generate.cpp
data_test/: basic.xml  graph.xml  tokenizer_basic.xml  tokenizer_nested.xml
resources/: README.md
src/: a.cpp  a.h  docs.h  graph.cpp  graph.h  id_encoder.h  id_encoder.inl  id_manager.h  indexer.h  page.cpp  page.h  parser.cpp  parser.h  wiki_parser.cpp  wiki_parser.h  xml_docs.cpp  xml_docs.h  xml_parser.cpp  xml_parser.h
src/api/: docs.h  filter.h  searcher.h  token.h  tokenizer.h
src/detail/: basic_token.h  no_filter.h  split_tokenizer.h  stopword_filter.cpp  stopword_filter.h  tf_idf_searcher.cpp  tf_idf_searcher.h  wiki_token.h  wiki_tokenizer.cpp  wiki_tokenizer.h  xml_docs.cpp  xml_docs.h
src/dsa/: trie_counter.cpp  trie_counter.h  trie_set.h
tests/: parsing.cpp  stopword_filter.cpp  test2.cpp  trie_counter.cpp  trie_set.cpp  wiki_tokenizer.cpp
